--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,8 +18,12 @@ android {
         }
     }
 }
+repositories{
+    mavenCentral()
+}
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:support-v4:22.2.1'
+    compile 'com.google.code.gson:gson:2.5'
 }
